--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,22 +1,80 @@
-name: Rust
+name: RustDesk CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
 
 env:
   CARGO_TERM_COLOR: always
+  RUSTFLAGS: "-C target-cpu=native"
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
+  build-windows:
+    name: Build Windows Release
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        target: [x86_64-pc-windows-msvc]
+        # 如需支持其他架构可添加：
+        # target: [x86_64-pc-windows-msvc, i686-pc-windows-msvc, aarch64-pc-windows-msvc]
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive  # 确保拉取子模块
+
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: ${{ matrix.target }}
+          profile: minimal
+          override: true
+
+      - name: Cache cargo dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Install Windows SDK
+        run: |
+          choco install -y windows-sdk-10.1
+          refreshenv
+
+      - name: Build agent
+        working-directory: ./agent_src
+        run: |
+          cargo build --release --target ${{ matrix.target }} --features "default"
+          ls -la ./target/${{ matrix.target }}/release/
+
+      - name: Package artifacts
+        run: |
+          mkdir -p release
+          cp ./agent_src/target/${{ matrix.target }}/release/rustdesk.exe ./release/agent.exe
+          cp -r ./images ./release/
+          Compress-Archive -Path ./release/* -DestinationPath rustdesk-lite-${{ github.run_number }}.zip
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: rustdesk-windows-${{ matrix.target }}
+          path: rustdesk-lite-${{ github.run_number }}.zip
+
+  # 可选：自动发布到 GitHub Releases
+  # release:
+  #   needs: build-windows
+  #   runs-on: ubuntu-latest
+  #   if: startsWith(github.ref, 'refs/tags/')
+  #   steps:
+  #     - uses: actions/download-artifact@v3
+  #       with:
+  #         name: rustdesk-windows-x86_64-pc-windows-msvc
+  #     - uses: softprops/action-gh-release@v1
+  #       with:
+  #         files: rustdesk-lite-*.zip
