--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,12 +18,12 @@ jobs:
       matrix:
         target: [x86_64-pc-windows-msvc]
         # 如需支持其他架构可添加：
-        # target: [x86_64-pc-windows-msvc, i686-pc-windows-msvc, aarch64-pc-windows-msvc]
+        # target: [i686-pc-windows-msvc, aarch64-pc-windows-msvc]
 
     steps:
       - uses: actions/checkout@v4
         with:
-          submodules: recursive  # 确保拉取子模块
+          submodules: recursive
 
       - name: Setup Rust
         uses: actions-rs/toolchain@v1
@@ -61,18 +61,19 @@ jobs:
           Compress-Archive -Path ./release/* -DestinationPath rustdesk-lite-${{ github.run_number }}.zip
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: rustdesk-windows-${{ matrix.target }}
           path: rustdesk-lite-${{ github.run_number }}.zip
+          retention-days: 7  # 自动7天后清理旧产物
 
-  # 可选：自动发布到 GitHub Releases
+  # 可选：自动发布到 GitHub Releases (同样使用v4版本)
   # release:
   #   needs: build-windows
   #   runs-on: ubuntu-latest
   #   if: startsWith(github.ref, 'refs/tags/')
   #   steps:
-  #     - uses: actions/download-artifact@v3
+  #     - uses: actions/download-artifact@v4
   #       with:
   #         name: rustdesk-windows-x86_64-pc-windows-msvc
   #     - uses: softprops/action-gh-release@v1
