--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,8 +17,6 @@ jobs:
     strategy:
       matrix:
         target: [x86_64-pc-windows-msvc]
-        # 如需支持其他架构可添加：
-        # target: [i686-pc-windows-msvc, aarch64-pc-windows-msvc]
 
     steps:
       - uses: actions/checkout@v4
@@ -30,10 +28,9 @@ jobs:
         with:
           toolchain: stable
           target: ${{ matrix.target }}
-          profile: minimal
           override: true
 
-      - name: Cache cargo dependencies
+      - name: Cache dependencies
         uses: actions/cache@v3
         with:
           path: |
@@ -42,40 +39,25 @@ jobs:
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Install Windows SDK
+      - name: Install Windows SDK (推荐方案)
         run: |
           choco install -y windows-sdk-10.1
-          refreshenv
+          echo "C:\Program Files (x86)\Windows Kits\10\bin\10.0.19041.0\x64" >> $GITHUB_PATH
 
       - name: Build agent
         working-directory: ./agent_src
         run: |
           cargo build --release --target ${{ matrix.target }} --features "default"
-          ls -la ./target/${{ matrix.target }}/release/
+          strip ./target/${{ matrix.target }}/release/rustdesk.exe || true  # 可选：减小二进制体积
 
       - name: Package artifacts
         run: |
           mkdir -p release
           cp ./agent_src/target/${{ matrix.target }}/release/rustdesk.exe ./release/agent.exe
           cp -r ./images ./release/
-          Compress-Archive -Path ./release/* -DestinationPath rustdesk-lite-${{ github.run_number }}.zip
+          7z a -tzip rustdesk-lite-${{ github.run_number }}.zip ./release/*
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: rustdesk-windows-${{ matrix.target }}
           path: rustdesk-lite-${{ github.run_number }}.zip
-          retention-days: 7  # 自动7天后清理旧产物
-
-  # 可选：自动发布到 GitHub Releases (同样使用v4版本)
-  # release:
-  #   needs: build-windows
-  #   runs-on: ubuntu-latest
-  #   if: startsWith(github.ref, 'refs/tags/')
-  #   steps:
-  #     - uses: actions/download-artifact@v4
-  #       with:
-  #         name: rustdesk-windows-x86_64-pc-windows-msvc
-  #     - uses: softprops/action-gh-release@v1
-  #       with:
-  #         files: rustdesk-lite-*.zip
