--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -45,17 +45,18 @@ jobs:
         shell: powershell
         env:
           VCPKGRS_DYNAMIC: 1
+          TARGET: ${{ matrix.target }}  # 关键修复点
         run: |
-          cargo build --release --target $env:matrix_target --features "default"
-          if (Test-Path "./target/$env:matrix_target/release/rustdesk.exe") {
-            & "C:\msys64\usr\bin\strip.exe" "./target/$env:matrix_target/release/rustdesk.exe" *>$null
+          cargo build --release --target $env:TARGET --features "default"
+          if (Test-Path "./target/$env:TARGET/release/rustdesk.exe") {
+            & "C:\msys64\usr\bin\strip.exe" "./target/$env:TARGET/release/rustdesk.exe" *>$null
           }
 
       - name: Package artifacts
         shell: powershell
         run: |
           New-Item -ItemType Directory -Path "release" -Force
-          Copy-Item "./agent_src/target/$env:matrix_target/release/rustdesk.exe" "./release/agent.exe"
+          Copy-Item "./target/$env:TARGET/release/rustdesk.exe" "./release/agent.exe"
           Copy-Item -Recurse "./images" "./release/"
           & "7z" a -tzip "rustdesk-lite-$env:run_number.zip" "./release/*"
 
