--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,7 +9,7 @@ on:
 env:
   CARGO_TERM_COLOR: always
   RUSTFLAGS: "-C target-cpu=native"
-  VCPKG_DEFAULT_TRIPLET: "x64-windows-static"  # 关键修复点
+  VCPKG_DEFAULT_TRIPLET: "x64-windows-static"
 
 jobs:
   build-windows:
@@ -24,21 +24,32 @@ jobs:
         with:
           submodules: recursive
 
-      # 修复1：完整安装vcpkg和依赖库
-      - name: Setup vcpkg
+      # 修复1：安装完整VPX开发包
+      - name: Setup vcpkg and dependencies
         shell: powershell
         run: |
+          # 安装最新版vcpkg
           git clone https://github.com/microsoft/vcpkg
           .\vcpkg\bootstrap-vcpkg.bat -disableMetrics
-          echo "VCPKG_ROOT=$((Resolve-Path .\vcpkg).Path)" >> $env:GITHUB_ENV
-          echo "$((Resolve-Path .\vcpkg).Path)\installed\x64-windows-static\bin" >> $env:GITHUB_PATH
+          
+          # 安装完整VPX开发包（包含头文件）
+          .\vcpkg\vcpkg install libvpx[core,highbitdepth,postproc,spatial-svc,tools]:x64-windows-static
+          .\vcpkg\vcpkg install libyuv:x64-windows-static
+          
+          # 设置环境变量
+          $vcpkgPath = (Resolve-Path .\vcpkg).Path
+          echo "VCPKG_ROOT=$vcpkgPath" >> $env:GITHUB_ENV
+          echo "$vcpkgPath\installed\x64-windows-static\bin" >> $env:GITHUB_PATH
+          echo "$vcpkgPath\installed\x64-windows-static\include" >> $env:GITHUB_PATH
 
-      # 修复2：安装必要的多媒体库
-      - name: Install dependencies
+      # 修复2：验证头文件安装
+      - name: Verify VPX installation
         shell: powershell
         run: |
-          .\vcpkg\vcpkg install opus:x64-windows-static vpx:x64-windows-static libyuv:x64-windows-static
-          choco install -y windows-sdk-10.1 llvm --force --no-progress
+          if (-not (Test-Path "$env:VCPKG_ROOT\installed\x64-windows-static\include\vpx\vp8.h")) {
+            Write-Error "VPX headers not found!"
+            exit 1
+          }
 
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
@@ -46,13 +57,14 @@ jobs:
           targets: ${{ matrix.target }}
           components: rust-src
 
-      # 修复3：显式设置链接路径
+      # 修复3：显式设置包含路径
       - name: Build agent
         working-directory: ./agent_src
         shell: powershell
         env:
-          VCPKGRS_DYNAMIC: 0  # 强制静态链接
-          RUSTFLAGS: "-C target-feature=+crt-static"
+          VCPKGRS_DYNAMIC: 0
+          C_INCLUDE_PATH: "${{ env.VCPKG_ROOT }}\installed\x64-windows-static\include"
+          CPLUS_INCLUDE_PATH: "${{ env.VCPKG_ROOT }}\installed\x64-windows-static\include"
         run: |
           cargo build --release --target ${{ matrix.target }} --features "default"
           if (Test-Path "./target/${{ matrix.target }}/release/rustdesk.exe") {
