--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,26 +24,17 @@ jobs:
         with:
           submodules: recursive
 
-      # 修复1：安装完整VPX开发包
       - name: Setup vcpkg and dependencies
         shell: powershell
         run: |
-          # 安装最新版vcpkg
           git clone https://github.com/microsoft/vcpkg
           .\vcpkg\bootstrap-vcpkg.bat -disableMetrics
-          
-          # 安装完整VPX开发包（包含头文件）
-          .\vcpkg\vcpkg install libvpx[core,highbitdepth,postproc,spatial-svc,tools]:x64-windows-static
-          .\vcpkg\vcpkg install libyuv:x64-windows-static
-          
-          # 设置环境变量
+          .\vcpkg\vcpkg install libvpx:x64-windows-static libyuv:x64-windows-static
           $vcpkgPath = (Resolve-Path .\vcpkg).Path
           echo "VCPKG_ROOT=$vcpkgPath" >> $env:GITHUB_ENV
           echo "$vcpkgPath\installed\x64-windows-static\bin" >> $env:GITHUB_PATH
-          echo "$vcpkgPath\installed\x64-windows-static\include" >> $env:GITHUB_PATH
 
-      # 修复2：验证头文件安装
-      - name: Verify VPX installation
+      - name: Verify installation
         shell: powershell
         run: |
           if (-not (Test-Path "$env:VCPKG_ROOT\installed\x64-windows-static\include\vpx\vp8.h")) {
@@ -57,14 +48,12 @@ jobs:
           targets: ${{ matrix.target }}
           components: rust-src
 
-      # 修复3：显式设置包含路径
       - name: Build agent
         working-directory: ./agent_src
         shell: powershell
         env:
           VCPKGRS_DYNAMIC: 0
           C_INCLUDE_PATH: "${{ env.VCPKG_ROOT }}\installed\x64-windows-static\include"
-          CPLUS_INCLUDE_PATH: "${{ env.VCPKG_ROOT }}\installed\x64-windows-static\include"
         run: |
           cargo build --release --target ${{ matrix.target }} --features "default"
           if (Test-Path "./target/${{ matrix.target }}/release/rustdesk.exe") {
@@ -77,7 +66,7 @@ jobs:
           New-Item -ItemType Directory -Path "release" -Force
           Copy-Item "./agent_src/target/${{ matrix.target }}/release/rustdesk.exe" "./release/agent.exe"
           Copy-Item -Recurse "./images" "./release/"
-          & "7z" a -tzip "rustdesk-lite-$env:run_number.zip" "./release/*"
+          7z a -tzip "rustdesk-lite-$env:run_number.zip" "./release/*"
 
       - uses: actions/upload-artifact@v4
         with:
