--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -53,7 +53,7 @@ jobs:
         shell: powershell
         env:
           VCPKGRS_DYNAMIC: 0
-          C_INCLUDE_PATH: "${{ env.VCPKG_ROOT }}\installed\x64-windows-static\include"
+          C_INCLUDE_PATH: "${{ env.VCPKG_ROOT }}/installed/x64-windows-static/include"
         run: |
           cargo build --release --target ${{ matrix.target }} --features "default"
           if (Test-Path "./target/${{ matrix.target }}/release/rustdesk.exe") {
