--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,107 +1,58 @@
-name: RustDesk CI
+name: Rust Windows CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ main ]
+    branches: [ "master" ]
 
 env:
   CARGO_TERM_COLOR: always
-  RUSTFLAGS: "-C target-cpu=native"
-  VCPKG_DEFAULT_TRIPLET: "x64-windows-static"
 
 jobs:
-  build-windows:
-    name: Build Windows Release
+  build-and-test:
+    name: Build and Test
     runs-on: windows-latest
     strategy:
       matrix:
         target: [x86_64-pc-windows-msvc]
-
+    
     steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-
-      # 修复1：安装完整的多媒体依赖链（强制重新安装）
-      - name: Install dependencies
-        shell: powershell
-        run: |
-          # 清理旧安装
-          if (Test-Path vcpkg) { Remove-Item -Recurse -Force vcpkg }
-          
-          # 安装最新vcpkg
-          git clone https://github.com/microsoft/vcpkg
-          .\vcpkg\bootstrap-vcpkg.bat -disableMetrics
-          
-          # 强制重新安装完整编解码器套件
-          .\vcpkg\vcpkg remove --outdated --recurse
-          .\vcpkg\vcpkg install opus[multistream,float,fixed-point]:x64-windows-static --recurse
-          .\vcpkg\vcpkg install libvpx[core,highbitdepth,multithread,tools]:x64-windows-static --recurse
-          .\vcpkg\vcpkg install libyuv:x64-windows-static
-          
-          # 设置环境变量
-          $vcpkgPath = (Resolve-Path .\vcpkg).Path
-          echo "VCPKG_ROOT=$vcpkgPath" >> $env:GITHUB_ENV
-          echo "$vcpkgPath\installed\x64-windows-static\bin" >> $env:GITHUB_PATH
-          echo "$vcpkgPath\installed\x64-windows-static\include" >> $env:GITHUB_PATH
-
-      # 修复2：手动验证并修复头文件位置
-      - name: Fix opus headers
-        shell: powershell
-        run: |
-          # 确保opus头文件在正确位置
-          $opusInclude = "$env:VCPKG_ROOT\installed\x64-windows-static\include\opus"
-          if (-not (Test-Path "$opusInclude\opus_multistream.h")) {
-              Write-Output "Fixing opus headers location..."
-              New-Item -ItemType Directory -Path $opusInclude -Force
-              Copy-Item "$env:VCPKG_ROOT\installed\x64-windows-static\include\*.h" $opusInclude
-          }
-
-          # 验证VPX头文件
-          if (-not (Test-Path "$env:VCPKG_ROOT\installed\x64-windows-static\include\vpx\vp8.h")) {
-              Write-Error "VPX headers still missing!"
-              exit 1
-          }
-
-      # 修复3：设置完整的构建环境
-      - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: ${{ matrix.target }}
-          components: rust-src, llvm-tools-preview
-
-      # 修复4：使用定制构建命令
-      - name: Build agent
-        working-directory: ./agent_src
-        shell: powershell
-        env:
-          VCPKGRS_DYNAMIC: 0
-          C_INCLUDE_PATH: "${{ env.VCPKG_ROOT }}/installed/x64-windows-static/include"
-          LIBRARY_PATH: "${{ env.VCPKG_ROOT }}/installed/x64-windows-static/lib"
-          PKG_CONFIG_PATH: "${{ env.VCPKG_ROOT }}/installed/x64-windows-static/lib/pkgconfig"
-        run: |
-          # 先单独构建依赖项
-          cargo build -p magnum-opus --release --target ${{ matrix.target }} --features "static"
-          cargo build -p scrap --release --target ${{ matrix.target }} --features "static-vpx"
-          
-          # 再构建主程序
-          cargo build --release --target ${{ matrix.target }} --features "default"
-          
-          if (Test-Path "./target/${{ matrix.target }}/release/rustdesk.exe") {
-              & "C:\msys64\usr\bin\strip.exe" "./target/${{ matrix.target }}/release/rustdesk.exe" *>$null
-          }
-
-      - name: Package artifacts
-        shell: powershell
-        run: |
-          New-Item -ItemType Directory -Path "release" -Force
-          Copy-Item "./agent_src/target/${{ matrix.target }}/release/rustdesk.exe" "./release/agent.exe"
-          Copy-Item -Recurse "./images" "./release/"
-          7z a -tzip "rustdesk-lite-$env:run_number.zip" "./release/*"
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: rustdesk-windows-${{ matrix.target }}
-          path: rustdesk-lite-*.zip
+    - uses: actions/checkout@v4
+    
+    - name: Install Rust
+      uses: dtolnay/rust-toolchain@stable
+      with:
+        toolchain: stable
+        targets: ${{ matrix.target }}
+    
+    - name: Cache cargo dependencies
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.cargo/registry
+          ~/.cargo/git
+          target
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-cargo-
+    
+    - name: Build (Release)
+      env:
+        SERVER_IP: ${{ secrets.SERVER_IP }}  # 传递 Secrets
+      run: cargo build --release --verbose -p client
+      
+    - name: Run Tests
+      run: cargo test --verbose 
+      
+    - name: Run Integration Tests
+      run: cargo test --release --verbose 
+      
+    - name: Upload Release Artifacts
+      if: matrix.target == 'x86_64-pc-windows-msvc'
+      uses: actions/upload-artifact@v4
+      with:
+        name: release-bin
+        path: |
+          target/release/agent.exe
+          target/release/build/
