--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,6 +26,17 @@ jobs:
         toolchain: stable
         targets: ${{ matrix.target }}
 
+    - name: Install vcpkg and opus
+      run: |
+        git clone https://github.com/microsoft/vcpkg.git
+        .\vcpkg\bootstrap-vcpkg.bat
+        .\vcpkg\vcpkg.exe install opus:x64-windows
+      shell: pwsh
+
+    - name: Set VCPKG_ROOT
+      run: echo "VCPKG_ROOT=${{ github.workspace }}\vcpkg" >> $env:GITHUB_ENV
+      shell: pwsh
+
     - name: Cache cargo dependencies
       uses: actions/cache@v3
       with:
