Install vcpkg and deps

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,11 +26,13 @@ jobs:
         toolchain: stable
         targets: ${{ matrix.target }}
 
-    - name: Install vcpkg and opus
+    - name: Install vcpkg and dependencies
       run: |
         git clone https://github.com/microsoft/vcpkg.git
         .\vcpkg\bootstrap-vcpkg.bat
         .\vcpkg\vcpkg.exe install opus:x64-windows
+        .\vcpkg\vcpkg.exe install libvpx:x64-windows-static
+        .\vcpkg\vcpkg.exe install yuv:x64-windows-static
       shell: pwsh
 
     - name: Set VCPKG_ROOT
