--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -38,6 +38,10 @@ jobs:
       run: echo "VCPKG_ROOT=${{ github.workspace }}\vcpkg" >> $env:GITHUB_ENV
       shell: pwsh
 
+    - name: Install LLVM for bindgen
+      run: choco install llvm -y
+      shell: pwsh
+
     - name: Cache cargo dependencies
       uses: actions/cache@v3
       with:
@@ -68,3 +72,7 @@ jobs:
         name: release-bin
         path: |
           agent_src/target/release/agent.exe
+
+    - name: List opus include files
+      run: Get-ChildItem -Recurse .\vcpkg\installed\x64-windows\include
+      shell: pwsh
