--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -38,6 +38,17 @@ jobs:
       run: echo "VCPKG_ROOT=${{ github.workspace }}\vcpkg" >> $env:GITHUB_ENV
       shell: pwsh
 
+    - name: Set VCPKG_DEFAULT_TRIPLET
+      run: echo "VCPKG_DEFAULT_TRIPLET=x64-windows" >> $env:GITHUB_ENV
+      shell: pwsh
+
+    - name: Symlink opus include to static path
+      run: |
+        New-Item -ItemType Directory -Force -Path .\vcpkg\installed\x64-windows-static
+        cmd /c mklink /D .\vcpkg\installed\x64-windows-static\include .\vcpkg\installed\x64-windows\include
+        cmd /c mklink /D .\vcpkg\installed\x64-windows-static\lib .\vcpkg\installed\x64-windows\lib
+      shell: pwsh
+
     - name: Install LLVM for bindgen
       run: choco install llvm -y
       shell: pwsh
