--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -47,6 +47,12 @@ jobs:
         if (!(Test-Path .\vcpkg\installed\x64-windows-static)) {
           New-Item -ItemType Directory -Force -Path .\vcpkg\installed\x64-windows-static
         }
+        if (Test-Path .\vcpkg\installed\x64-windows-static\include) {
+          Remove-Item .\vcpkg\installed\x64-windows-static\include -Force -Recurse
+        }
+        if (Test-Path .\vcpkg\installed\x64-windows-static\lib) {
+          Remove-Item .\vcpkg\installed\x64-windows-static\lib -Force -Recurse
+        }
         cmd /c mklink /D .\vcpkg\installed\x64-windows-static\include .\vcpkg\installed\x64-windows\include
         cmd /c mklink /D .\vcpkg\installed\x64-windows-static\lib .\vcpkg\installed\x64-windows\lib
       shell: pwsh
